# arduino_sketch_builder

./: .gitignore  Gemfile  README.md  arduino_sketch_builder.gemspec
lib/: arduino_sketch_builder.rb
lib/arduino_sketch_builder/: arduino_cmake_build.rb  base.rb  c_make_lists_file_generator.rb  setup.rb  version.rb
lib/arduino_sketches/: CMakeLists.txt
lib/arduino_sketches/src/: CMakeLists.txt
lib/arduino_sketches/src/BlinkCustomized/: BlinkCustomized.ino
spec/: spec_helper.rb
spec/arduino_sketch_builder/: arduino_cmake_build_spec.rb  base_spec.rb  c_make_lists_file_generator_spec.rb  setup_spec.rb
spec/arduino_sketches_fixture/: CMakeLists.txt
spec/arduino_sketches_fixture/src/: CMakeLists.txt
spec/arduino_sketches_fixture/src/BlinkCustomizedForTest/: BlinkCustomizedForTest.ino
spec/fixtures/: CMakeListsForTestSketch2.txt  MainCMakeLists.txt
spec/temp/: CMakeLists.txt
spec/temp/blink_customized_for_test/src/: CMakeLists.txt
templates/: MainCMakeListsTemplate.txt.erb  SourceCMakeListsTemplate.txt.erb  root_gitignore_template
